--- a/index.html
+++ b/index.html
@@ -3,6 +3,204 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ragner Fritz Q. Bartiana | Portfolio</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+    }
+    @keyframes gradient {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+    .hero-bg {
+      background: linear-gradient(120deg, #0f172a 0%, #1e293b 50%, #18181b 100%);
+      background-size: 200% 200%;
+      animation: gradient 8s ease-in-out infinite;
+    }
+    .glass {
+      background: rgba(24, 24, 27, 0.85);
+      backdrop-filter: blur(6px);
+      border: 1px solid rgba(60, 60, 70, 0.2);
+    }
+    .section-title {
+      letter-spacing: 0.05em;
+    }
+  </style>
+</head>
+<body class="hero-bg bg-zinc-900 text-gray-200 font-sans min-h-screen">
+  <!-- Header -->
+  <header class="w-full py-6 px-6 flex justify-between items-center glass shadow-lg fixed top-0 left-0 z-50">
+    <div class="text-xl font-bold text-blue-400 tracking-wide">Ragner Fritz Q. Bartiana</div>
+    <nav>
+      <ul class="flex gap-8 text-gray-300 font-semibold">
+        <li><a href="#about" class="hover:text-blue-400 transition">About</a></li>
+        <li><a href="#skills" class="hover:text-blue-400 transition">Skills</a></li>
+        <li><a href="#projects" class="hover:text-blue-400 transition">Projects</a></li>
+        <li><a href="#contact" class="hover:text-blue-400 transition">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="flex flex-col items-center justify-center min-h-[70vh] pt-32 pb-12">
+    <div class="glass rounded-xl p-10 shadow-xl max-w-2xl w-full text-center">
+      <h1 class="text-4xl md:text-5xl font-bold text-blue-400 mb-4 section-title">Hi, I'm Ragner Fritz Q. Bartiana</h1>
+      <p class="text-lg md:text-xl text-gray-300 mb-6">
+        I build modern, responsive web applications with clean and efficient code.<br>
+        My goal is to solve complex problems and create user-friendly solutions.<br>
+        Let's build something amazing together!
+      </p>
+      <a href="#contact" class="inline-block bg-blue-500 text-white px-6 py-3 rounded-lg font-semibold shadow hover:bg-blue-600 transition active:bg-blue-700">
+        Contact Me
+      </a>
+    </div>
+  </section>
+
+  <!-- About Me -->
+  <section id="about" class="py-20 bg-zinc-800">
+    <div class="container mx-auto px-6">
+      <h2 class="text-3xl font-bold text-center mb-8 text-blue-400 section-title">About Me</h2>
+      <div class="max-w-3xl mx-auto glass rounded-xl p-8 shadow text-center">
+        <p class="text-lg text-gray-300">
+          I'm a passionate developer focused on creating seamless digital experiences. With a strong foundation in both front-end and back-end technologies, I strive to deliver solutions that are not only functional but also visually appealing and intuitive. My expertise spans web development, UI/UX design, and prototyping, ensuring every project meets the highest standards.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Skills -->
+  <section id="skills" class="py-20 bg-gradient-to-b from-zinc-900 to-zinc-800">
+    <div class="container mx-auto px-6">
+      <h2 class="text-4xl font-extrabold text-center mb-8 text-blue-400 section-title">Skills</h2>
+      <p class="text-base md:text-lg text-center mb-12 text-gray-300 max-w-2xl mx-auto">
+        My skill set includes a variety of technologies and tools that I use to create dynamic and beautiful web applications. I'm always eager to learn and adapt to new challenges.
+      </p>
+      <div class="grid grid-cols-2 md:grid-cols-4 gap-8 text-center">
+        <!-- Skill Item -->
+        <div class="glass p-6 rounded-lg shadow transition-transform duration-300 hover:scale-105 hover:border-blue-400 border border-transparent flex flex-col items-center">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8 mb-2 text-blue-300">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M9 17.25v1.007a3 3 0 0 1-.879 2.122L7.5 21h9l-.621-.621A3 3 0 0 1 15 18.257V17.25m6-12V15a2.25 2.25 0 0 1-2.25 2.25H5.25A2.25 2.25 0 0 1 3 15V5.25m18 0A2.25 2.25 0 0 0 18.75 3H5.25A2.25 2.25 0 0 0 3 5.25m18 0V12a2.25 2.25 0 0 1-2.25 2.25H5.25A2.25 2.25 0 0 1 3 12V5.25" />
+          </svg>
+          <h3 class="text-lg font-semibold text-blue-300 mb-2">HTML</h3>
+          <span class="text-xs text-gray-400">Markup Language</span>
+        </div>
+        <!-- Skill Item -->
+        <div class="glass p-6 rounded-lg shadow transition-transform duration-300 hover:scale-105 hover:border-blue-400 border border-transparent flex flex-col items-center">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" class="w-8 h-8 mb-2 text-blue-300" fill="currentColor">
+            <path d="M128 96L162.9 491.8L320 544L477.1 491.8L512 96L128 96zM441.1 176L436.3 223.3L321 272.6L320.7 272.7L432.2 272.7L419.4 419.3L321.2 448L222.4 418.8L216 344.9L264.9 344.9L268.1 383.2L320.7 396.5L375.4 381.1L379.1 319.5L212.8 319L212.8 318.9L212.6 319L209 272.7L321.1 226L327.6 223.3L204.7 223.3L198.9 176L441.1 176z"/>
+          </svg>
+          <h3 class="text-lg font-semibold text-blue-300 mb-2">CSS</h3>
+          <span class="text-xs text-gray-400">Styling & Layout</span>
+        </div>
+        <!-- Skill Item -->
+        <div class="glass p-6 rounded-lg shadow transition-transform duration-300 hover:scale-105 hover:border-blue-400 border border-transparent flex flex-col items-center">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8 mb-2 text-blue-300">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
+          </svg>
+          <h3 class="text-lg font-semibold text-blue-300 mb-2">JavaScript</h3>
+          <span class="text-xs text-gray-400">Programming</span>
+        </div>
+        <!-- Skill Item -->
+        <div class="glass p-6 rounded-lg shadow transition-transform duration-300 hover:scale-105 hover:border-blue-400 border border-transparent flex flex-col items-center">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" class="w-8 h-8 mb-2 text-blue-300" fill="currentColor">
+            <path d="M128 96L162.9 491.8L320 544L477.1 491.8L512 96L128 96zM441.1 176L436.3 223.3L321 272.6L320.7 272.7L432.2 272.7L419.4 419.3L321.2 448L222.4 418.8L216 344.9L264.9 344.9L268.1 383.2L320.7 396.5L375.4 381.1L379.1 319.5L212.8 319L212.8 318.9L212.6 319L209 272.7L321.1 226L327.6 223.3L204.7 223.3L198.9 176L441.1 176z"/>
+          </svg>
+          <h3 class="text-lg font-semibold text-blue-300 mb-2">React</h3>
+          <span class="text-xs text-gray-400">Front-end Framework</span>
+        </div>
+        <!-- Skill Item -->
+        <div class="glass p-6 rounded-lg shadow transition-transform duration-300 hover:scale-105 hover:border-blue-400 border border-transparent flex flex-col items-center">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" class="w-8 h-8 mb-2 text-blue-300" fill="currentColor">
+            <path d="M535.6 85.7C513.7 63.8 478.3 63.8 456.4 85.7L432 110.1L529.9 208L554.3 183.6C576.2 161.7 576.2 126.3 554.3 104.4L535.6 85.7zM236.4 305.7C230.3 311.8 225.6 319.3 222.9 327.6L193.3 416.4C190.4 425 192.7 434.5 199.1 441C205.5 447.5 215 449.7 223.7 446.8L312.5 417.2C320.7 414.5 328.2 409.8 334.4 403.7L496 241.9L398.1 144L236.4 305.7zM160 128C107 128 64 171 64 224L64 480C64 533 107 576 160 576L416 576C469 576 512 533 512 480L512 384C512 366.3 497.7 352 480 352C462.3 352 448 366.3 448 384L448 480C448 497.7 433.7 512 416 512L160 512C142.3 512 128 497.7 128 480L128 224C128 206.3 142.3 192 160 192L256 192C273.7 192 288 177.7 288 160C288 142.3 273.7 128 256 128L160 128z"/>
+          </svg>
+          <h3 class="text-lg font-semibold text-blue-300 mb-2">Canva</h3>
+          <span class="text-xs text-gray-400">Graphic Design</span>
+        </div>
+        <!-- Skill Item -->
+        <div class="glass p-6 rounded-lg shadow transition-transform duration-300 hover:scale-105 hover:border-blue-400 border border-transparent flex flex-col items-center">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" class="w-8 h-8 mb-2 text-blue-300" fill="currentColor">
+            <path d="M415.9 274.5C428.1 271.2 440.9 277 446.4 288.3L465 325.9C475.3 327.3 485.4 330.1 494.9 334L529.9 310.7C540.4 303.7 554.3 305.1 563.2 314L582.4 333.2C591.3 342.1 592.7 356.1 585.7 366.5L562.4 401.4C564.3 406.1 566 411 567.4 416.1C568.8 421.2 569.7 426.2 570.4 431.3L608.1 449.9C619.4 455.5 625.2 468.3 621.9 480.4L614.9 506.6C611.6 518.7 600.3 526.9 587.7 526.1L545.7 523.4C539.4 531.5 532.1 539 523.8 545.4L526.5 587.3C527.3 599.9 519.1 611.3 507 614.5L480.8 621.5C468.6 624.8 455.9 619 450.3 607.7L431.7 570.1C421.4 568.7 411.3 565.9 401.8 562L366.8 585.3C356.3 592.3 342.4 590.9 333.5 582L314.3 562.8C305.4 553.9 304 540 311 529.5L334.3 494.5C332.4 489.8 330.7 484.9 329.3 479.8C327.9 474.7 327 469.6 326.3 464.6L288.6 446C277.3 440.4 271.6 427.6 274.8 415.5L281.8 389.3C285.1 377.2 296.4 369 309 369.8L350.9 372.5C357.2 364.4 364.5 356.9 372.8 350.5L370.1 308.7C369.3 296.1 377.5 284.7 389.6 281.5L415.8 274.5zM448.4 404C424.1 404 404.4 423.7 404.5 448.1C404.5 472.4 424.2 492 448.5 492C472.8 492 492.5 472.3 492.5 448C492.4 423.6 472.7 404 448.4 404zM224.9 18.5L251.1 25.5C263.2 28.8 271.4 40.2 270.6 52.7L267.9 94.5C276.2 100.9 283.5 108.3 289.8 116.5L331.8 113.8C344.3 113 355.7 121.2 359 133.3L366 159.5C369.2 171.6 363.5 184.4 352.2 190L314.5 208.6C313.8 213.7 312.8 218.8 311.5 223.8C310.2 228.8 308.4 233.8 306.5 238.5L329.8 273.5C336.8 284 335.4 297.9 326.5 306.8L307.3 326C298.4 334.9 284.5 336.3 274 329.3L239 306C229.5 309.9 219.4 312.7 209.1 314.1L190.5 351.7C184.9 363 172.1 368.7 160 365.5L133.8 358.5C121.6 355.2 113.5 343.8 114.3 331.3L117 289.4C108.7 283 101.4 275.6 95.1 267.4L53.1 270.1C40.6 270.9 29.2 262.7 25.9 250.6L18.9 224.4C15.7 212.3 21.4 199.5 32.7 193.9L70.4 175.3C71.1 170.2 72.1 165.2 73.4 160.1C74.8 155 76.4 150.1 78.4 145.4L55.1 110.5C48.1 100 49.5 86.1 58.4 77.2L77.6 58C86.5 49.1 100.4 47.7 110.9 54.7L145.9 78C155.4 74.1 165.5 71.3 175.8 69.9L194.4 32.3C200 21 212.7 15.3 224.9 18.5zM192.4 148C168.1 148 148.4 167.7 148.4 192C148.4 216.3 168.1 236 192.4 236C216.7 236 236.4 216.3 236.4 192C236.4 167.7 216.7 148 192.4 148z"/>
+          </svg>
+          <h3 class="text-lg font-semibold text-blue-300 mb-2">Prototyping</h3>
+          <span class="text-xs text-gray-400">Wireframes & Mockups</span>
+        </div>
+        <!-- Skill Item -->
+        <div class="glass p-6 rounded-lg shadow transition-transform duration-300 hover:scale-105 hover:border-blue-400 border border-transparent flex flex-col items-center">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" class="w-8 h-8 mb-2 text-blue-300" fill="currentColor">
+            <path d="M142 159.8C142 106.9 184.9 64 237.8 64L402.2 64C455.1 64 498 106.9 498 159.8C498 193.3 480.8 222.8 454.8 239.9C480.8 257 498 286.5 498 320C498 372.9 455.1 415.8 402.2 415.8L400.1 415.8C375.3 415.8 352.7 406.4 335.7 390.9L335.7 479.2C335.7 532.8 291.7 576 238.3 576C185.5 576 142 533.2 142 480.2C142 446.7 159.2 417.2 185.2 400.1C159.2 383 142 353.5 142 320C142 286.5 159.2 257 185.2 239.9C159.2 222.8 142 193.3 142 159.8zM304.3 255.6L237.8 255.6C202.2 255.6 173.4 284.4 173.4 320C173.4 355.4 202 384.2 237.4 384.4L304.3 384.4L304.3 255.6zM335.7 320C335.7 355.6 364.5 384.4 400.1 384.4L402.2 384.4C437.8 384.4 466.6 355.6 466.6 320C466.6 284.4 437.8 255.6 402.2 255.6L400.1 255.6C364.5 255.6 335.7 284.4 335.7 320zM237.8 415.8L237.4 415.8C202 416 173.4 444.8 173.4 480.2C173.4 515.6 202.6 544.6 238.3 544.6C274.6 544.6 304.3 515.2 304.3 479.1L304.3 415.7L237.8 415.7zM237.8 95.4C202.2 95.4 173.4 124.2 173.4 159.8C173.4 195.4 202.2 224.2 237.8 224.2L304.3 224.2L304.3 95.4L237.8 95.4zM335.7 224.2L402.2 224.2C437.8 224.2 466.6 195.4 466.6 159.8C466.6 124.2 437.8 95.4 402.2 95.4L335.7 95.4L335.7 224.2z"/>
+          </svg>
+          <h3 class="text-lg font-semibold text-blue-300 mb-2">Figma</h3>
+          <span class="text-xs text-gray-400">Design Tool</span>
+        </div>
+        <!-- Skill Item -->
+        <div class="glass p-6 rounded-lg shadow transition-transform duration-300 hover:scale-105 hover:border-blue-400 border border-transparent flex flex-col items-center">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" class="w-8 h-8 mb-2 text-blue-300" fill="currentColor">
+            <path d="M112 288L112 448C112 456.8 119.2 464 128 464L512 464C520.8 464 528 456.8 528 448L528 288L112 288zM64 192C64 156.7 92.7 128 128 128L512 128C547.3 128 576 156.7 576 192L576 448C576 483.3 547.3 512 512 512L128 512C92.7 512 64 483.3 64 448L64 192z"/>
+          </svg>
+          <h3 class="text-lg font-semibold text-blue-300 mb-2">UI &amp; UX Design</h3>
+          <span class="text-xs text-gray-400">User Experience</span>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+    <!-- Projects -->
+  <section id="projects" class="py-20 bg-zinc-800">
+    <div class="container mx-auto px-6">
+      <h2 class="text-3xl font-bold text-center mb-8 text-blue-400 section-title">Projects</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+        <!-- Project 1 -->
+        <div class="glass p-6 rounded-xl shadow-lg hover:shadow-2xl transition">
+          <img src="./assets/Halarma.png" alt="HALA!RMA Project" class="w-full h-48 object-cover rounded mb-4 hover:scale-105 transition-transform duration-300 border border-zinc-700">
+          <h3 class="text-lg font-semibold text-blue-300 mb-2">Full-stack, Capstone Project HALA!RMA</h3>
+          <p class="mt-2 text-gray-400 text-sm">An Incident Reporting and Hazard Information System for the Health and Safety Office. Features SQL, authentication via magic link, Supabase database, and user management.</p>
+          <a href="https://yourwebsite1.com" target="_blank" class="mt-4 inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 active:bg-blue-700 font-semibold shadow">
+            View Demo
+          </a>
+        </div>
+        <!-- Project 2 -->
+        <div class="glass p-6 rounded-xl shadow-lg hover:shadow-2xl transition">
+          <img src="./assets/QM.png" alt="Random Quotes Machine" class="w-full h-48 object-cover rounded mb-4 hover:scale-105 transition-transform duration-300 border border-zinc-700">
+          <h3 class="text-lg font-semibold text-blue-300 mb-2">Front-end (Random Quotes Machine)</h3>
+          <p class="mt-2 text-gray-400 text-sm">A simple web app that generates random quotes. Built with React and styled for a clean, modern look.</p>
+          <a href="https://quotesmachine-rosy.vercel.app" target="_blank" class="mt-4 inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 active:bg-blue-700 font-semibold shadow">
+            View Demo
+          </a>
+        </div>
+        <!-- Add more projects here if needed -->
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="py-20 bg-gradient-to-t from-zinc-900 via-zinc-800 to-zinc-700 text-gray-200">
+    <div class="container mx-auto px-6">
+      <h2 class="text-3xl font-bold text-center mb-8 text-blue-400 section-title">Contact Me</h2>
+      <form action="https://formsubmit.co/fritzdezt@gmail.com" method="POST" class="max-w-lg mx-auto glass rounded-xl p-8 shadow-lg">
+        <input type="text" name="name" placeholder="Your Name" required class="block w-full p-3 mb-4 border border-zinc-700 rounded text-black focus:outline-none focus:ring-2 focus:ring-blue-400">
+        <input type="email" name="email" placeholder="Your Email" required class="block w-full p-3 mb-4 border border-zinc-700 rounded text-black focus:outline-none focus:ring-2 focus:ring-blue-400">
+        <textarea name="message" placeholder="Your Message" rows="4" required class="block w-full p-3 mb-4 border border-zinc-700 rounded text-black focus:outline-none focus:ring-2 focus:ring-blue-400"></textarea>
+        <button type="submit" class="block w-full bg-blue-500 text-white p-3 rounded hover:bg-blue-600 active:bg-blue-700 font-semibold shadow">
+          Send Message
+        </button>
+      </form>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="py-6 text-center text-gray-400 bg-zinc-900 mt-10">
+    &copy; 2025 Ragner Fritz Q. Bartiana. All rights reserved.
+  </footer>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
