--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <h3 class="text-lg font-semibold text-blue-300 mb-2">Full-stack, Capstone Project HALA!RMA</h3>
             <p class="mt-2 text-gray-400 text-sm">An Incident Reporting and Hazard Information System for the Health and Safety Office. Features SQL, authentication via magic link, Supabase database, and user management.</p>
           </div>
-          <a href="hala-rma.vercel.app" target="_blank" class="mt-4 inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 active:bg-blue-700 font-semibold shadow self-start">
+          <a href="hala-rma-git-main-prets411s-projects.vercel.app" target="_blank" class="mt-4 inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 active:bg-blue-700 font-semibold shadow self-start">
             View Demo
           </a>
         </div>
